[project]
name = "sample"
version = "0.1.0"
description = "A MCP server project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["httpx>=0.28.1", "mcp>=1.6.0", "python-dotenv>=1.1.0"]
[[project.authors]]
name = "ryuichi1208"
email = "ryucrosskey@gmail.com"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
sample = "sample:main"
sample-ssh = "sample:ssh_main"
