[project]
name = "stt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.50.0",
    "dotenv>=0.9.9",
    "google-genai>=1.13.0",
    "mcp>=1.7.1",
    "openai>=1.77.0",
    "openai-whisper>=20240930",
    "pyaudio>=0.2.14",
    "pydub>=0.25.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pyttsx3>=2.98",
    "ruff>=0.11.8",
]
